--- a/index.html
+++ b/index.html
@@ -3,20 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>VivaEvents</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Asegúrate de tener esto -->
 </head>
 <body>
   <header>
     <nav>
-      <h1>Mi sitio</h1>
+      <h1>VivaEvents</h1>
       <ul class="nav-links" id="nav-links">
-
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Inicio2</a></li>
+        <li><a href="#">Eventos</a></li>
         <li><a href="#">Inicio3</a></li>
-        <li><a href="#">Inicio4</a></li>
+        <li><a href="#">Iniciar Sesión</a></li>
       </ul>
+      <!-- Icono de usuario y menú desplegable -->
+      <div class="user-option" id="user-option">
+        <div class="user-icon" id="user-icon">
+          <i class="fas fa-user"></i>
+        </div>
+        <div class="user-dropdown" id="user-dropdown">
+          <a href="#">Iniciar sesión</a>
+          <a href="#">Registrarse</a>
+        </div>
+      </div>
+      <!-- Menú hamburguesa -->
       <div class="hamburguer" id="hamburguer">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -25,8 +37,7 @@
     </nav>
   </header>
 
-
-
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
+  
 </body>
 </html>
