--- a/index.html
+++ b/index.html
@@ -37,6 +37,46 @@
     </nav>
   </header>
 
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h2>Bienvenido a tu plataforma de gestión de eventos</h2>
+        <p>Organiza, gestiona y participa en eventos de forma fácil y eficiente.</p>
+        <a href="#crear-evento" class="cta-btn">Crear evento</a>
+        <a href="#ver-eventos" class="cta-btn">Ver eventos</a>
+      </div>
+    </section>
+
+    <section class="about">
+      <h3>¿Cómo funciona?</h3>
+      <p>Con nuestra plataforma, puedes crear y gestionar eventos con facilidad. Registra los detalles, genera códigos QR para los asistentes y mucho más.</p>
+    </section>
+
+    <section class="features">
+      <h3>Características clave</h3>
+      <ul>
+        <li>Generación de códigos QR</li>
+        <li>Verificación de asistencia</li>
+        <li>Personalización de eventos</li>
+        <li>Notificaciones en tiempo real</li>
+      </ul>
+    </section>
+
+    <section class="testimonials">
+      <h3>Lo que dicen nuestros usuarios</h3>
+      <div class="testimonial">
+        <p>"Una herramienta increíble que hace que gestionar eventos sea mucho más fácil." - Juan Pérez</p>
+      </div>
+      <div class="testimonial">
+        <p>"Recomiendo esta plataforma a todos los organizadores de eventos. ¡Es muy eficiente!" - Maria López</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Gestión de Eventos | Todos los derechos reservados</p>
+  </footer>
+
   <script src="script.js" defer></script>
   
 </body>
