--- a/login.html
+++ b/login.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-    <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="styles2.css" />
     <title>Login & Registration Form</title>
   </head>
@@ -16,80 +13,65 @@
       <div class="forms">
         <div class="form login">
           <span class="title">Login</span>
-
-          <form action="#">
+          <form action="login.php" method="POST">
             <div class="input-field">
-              <input type="text" placeholder="Enter your email" required />
+              <input type="text" name="email" placeholder="Enter your email" required />
               <i class="uil uil-envelope icon"></i>
             </div>
             <div class="input-field">
-              <input type="password" class="password" placeholder="Enter your password" required />
+              <input type="password" name="password" class="password" placeholder="Enter your password" required />
               <i class="uil uil-lock icon"></i>
               <i class="uil uil-eye-slash showHidePw"></i>
             </div>
-
             <div class="checkbox-text">
               <div class="checkbox-content">
                 <input type="checkbox" id="logCheck" />
                 <label for="logCheck" class="text">Remember me</label>
               </div>
-
               <a href="#" class="text">Forgot password?</a>
             </div>
-
             <div class="input-field button">
-              <input type="button" value="Login" />
+              <input type="submit" value="Login" />
             </div>
           </form>
-
           <div class="login-signup">
-            <span class="text"
-              >Not a member?
-              <a href="#" class="text signup-link">Signup Now</a>
-            </span>
+            <span class="text">Not a member? <a href="#" class="text signup-link">Signup Now</a></span>
           </div>
         </div>
 
         <!-- Registration Form -->
         <div class="form signup">
           <span class="title">Registration</span>
-
-          <form action="#">
+          <form action="register.php" method="POST">
             <div class="input-field">
-              <input type="text" placeholder="Enter your name" required />
+              <input type="text" name="name" placeholder="Enter your name" required />
               <i class="uil uil-user"></i>
             </div>
             <div class="input-field">
-              <input type="text" placeholder="Enter your email" required />
+              <input type="text" name="email" placeholder="Enter your email" required />
               <i class="uil uil-envelope icon"></i>
             </div>
             <div class="input-field">
-              <input type="password" class="password" placeholder="Create a password" required />
+              <input type="password" name="password" class="password" placeholder="Create a password" required />
               <i class="uil uil-lock icon"></i>
             </div>
             <div class="input-field">
-              <input type="password" class="password" placeholder="Confirm a password" required />
+              <input type="password" name="confirm_password" class="password" placeholder="Confirm a password" required />
               <i class="uil uil-lock icon"></i>
               <i class="uil uil-eye-slash showHidePw"></i>
             </div>
-
             <div class="checkbox-text">
               <div class="checkbox-content">
                 <input type="checkbox" id="termCon" />
                 <label for="termCon" class="text">I accepted all terms and conditions</label>
               </div>
             </div>
-
             <div class="input-field button">
-              <input type="button" value="Signup" />
+              <input type="submit" value="Signup" />
             </div>
           </form>
-
           <div class="login-signup">
-            <span class="text"
-              >Already a member?
-              <a href="#" class="text login-link">Login Now</a>
-            </span>
+            <span class="text">Already a member? <a href="#" class="text login-link">Login Now</a></span>
           </div>
         </div>
       </div>
